# gst-namedpipe

./: README.md  gstnamedpipesink.c  gstnamedpipesink.h  meson.build  plugin.c  sink.c  sink.h  src.c  src.h
test/: Dockerfile  Makefile  reader.c  start.sh  writer.c
